--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsnd --respawn index.ts",
-    "dev": "nodemon --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
+    "start": "nodemon index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,9 +20,11 @@
   "dependencies": {
     "@types/express": "^4.17.12",
     "@types/mysql": "^2.15.18",
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "ts-node-dev": "^1.1.6"
+    "ts-node-dev": "^1.1.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
