--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "homepage": "https://github.com/ndnzingano/library_backend#readme",
   "dependencies": {
     "@types/express": "^4.17.12",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/mysql": "^2.15.18",
     "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "ts-node-dev": "^1.1.6",
     "uuid": "^8.3.2"
