--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
   },
   "homepage": "https://github.com/ndnzingano/library_backend#readme",
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/mysql": "^2.15.18",
+    "@types/swagger-jsdoc": "^6.0.0",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/uuid": "^8.3.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "ts-node-dev": "^1.1.6",
     "uuid": "^8.3.2"
   },
